Improve support for rendering inside browser app

--- a/share/icicle.htm
+++ b/share/icicle.htm
@@ -23,9 +23,11 @@
         /* BEGIN contents of icicle.js */
         {{{icicle_js}}}
         /* END contents of icicle.js */
+        
+        window.onload = svInit;
     </script>
   </head>
-  <body>
+  <body class="icicle">
     <h1>{{title}}</h1>
     <div id="info">
       Hover over a block for summary information.  Click a block for details.
